--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Fonts: Syne (display) + DM Sans (body) — distinctive, not overused -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;1,9..40,300&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&family=Syne:wght@400;500;600;700;800&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;1,9..40,300&display=swap" rel="stylesheet" />
 
   <style>
     /* ─── DESIGN TOKENS ─────────────────────────────────────────── */
@@ -198,13 +198,16 @@
     }
 
     .hero-name {
-      font-family: 'Syne', sans-serif;
-      font-size: clamp(52px, 7.5vw, 104px);
-      font-weight: 800;
-      line-height: 0.94;
-      letter-spacing: -0.04em;
+      font-family: 'Cormorant', serif;
+      font-size: clamp(42px, 10vw, 108px);
+      font-weight: 300;
+      line-height: 0.96;
+      letter-spacing: 0.01em;
       color: var(--text);
       margin-bottom: 20px;
+      overflow-wrap: break-word;
+      word-break: break-word;
+      max-width: 100%;
     }
 
     .hero-title {
@@ -1060,11 +1063,15 @@
       .hero-stat:last-child { border-bottom: none; padding-bottom: 0; }
 
       .edu-grid { grid-template-columns: 1fr; }
+
+      /* prevent any horizontal overflow */
+      body { overflow-x: hidden; }
+      .hero-inner { padding: 60px 0 80px; }
     }
 
     @media (max-width: 640px) {
       .skills-grid { grid-template-columns: 1fr; }
-      .hero-name { font-size: 48px; }
+      .hero-name { font-size: 13vw; letter-spacing: 0; }
     }
   </style>
 </head>
@@ -1908,9 +1915,9 @@
   // 4. Copy your Public Key from Account → API Keys
   // 5. Replace the three placeholder values below
 
-  const EMAILJS_PUBLIC_KEY  = 'YOUR_PUBLIC_KEY';   // ← replace
-  const EMAILJS_SERVICE_ID  = 'YOUR_SERVICE_ID';   // ← replace
-  const EMAILJS_TEMPLATE_ID = 'YOUR_TEMPLATE_ID';  // ← replace
+  const EMAILJS_PUBLIC_KEY  = 'ZhiXrXD1EFUU0rlhH';
+  const EMAILJS_SERVICE_ID  = 'service_en0x8vo';
+  const EMAILJS_TEMPLATE_ID = 'template_5nu0v6f';
 
   // Load EmailJS SDK
   (function(){
